--- a/GitUseExample/Base.lproj/LaunchScreen.storyboard
+++ b/GitUseExample/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,15 +15,55 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tqj-Ub-LKg">
+                                <rect key="frame" x="82" y="61" width="156" height="21"/>
+                                <color key="backgroundColor" red="0.98229337989999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="156" id="8DN-3D-68o"/>
+                                    <constraint firstAttribute="height" constant="21" id="XNa-d1-pJ4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r3U-ZZ-4ma">
+                                <rect key="frame" x="42" y="119" width="236" height="47"/>
+                                <color key="backgroundColor" red="1" green="0.29535401236975178" blue="0.2549677005537071" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="47" id="5kD-o5-blo"/>
+                                    <constraint firstAttribute="width" constant="236" id="C2P-uS-QeM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="r3U-ZZ-4ma" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4ab-8o-TDi"/>
+                            <constraint firstItem="Tqj-Ub-LKg" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="41" id="7I5-Ho-spC"/>
+                            <constraint firstItem="r3U-ZZ-4ma" firstAttribute="top" secondItem="Tqj-Ub-LKg" secondAttribute="bottom" constant="37" id="QgY-ye-EJu"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="r3U-ZZ-4ma" secondAttribute="bottom" constant="314" id="VHO-gx-MNg"/>
+                            <constraint firstItem="Tqj-Ub-LKg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WCq-91-kYq"/>
+                            <constraint firstItem="r3U-ZZ-4ma" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Tqj-Ub-LKg" secondAttribute="bottom" constant="37" id="ifp-Ht-mRE"/>
+                            <constraint firstItem="r3U-ZZ-4ma" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="119" id="xQZ-Zh-E3L"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QgY-ye-EJu"/>
+                                <exclude reference="VHO-gx-MNg"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-4" y="412"/>
         </scene>
     </scenes>
 </document>
